--- a/WebOnlineCheckBackend/src/main/resources/application.yml
+++ b/WebOnlineCheckBackend/src/main/resources/application.yml
@@ -2,10 +2,32 @@
 spring:
   datasource:
     #MySQL配置
-    url: jdbc:mysql://{localhost}:3306/{database}?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/web?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: {username}
     password: {password}
     driver-class-name: com.mysql.cj.jdbc.Driver
+  # Redis数据库索引（默认为0）
+  redis:
+    # Redis数据库索引（默认为0）
+    database: 0
+    # Redis服务器地址
+    host: 127.0.0.1
+    # Redis服务器连接端口
+    port: 6379
+    # 连接超时时间（毫秒）
+    timeout: 5000
+    password: {password}
+#    jedis:
+#      pool:
+#        # 连接池最大连接数（使用负值表示没有限制）
+#        max-active: 8
+#        # 连接池最大阻塞等待时间（使用负值表示没有限制）
+#        max-wait: 1
+#        # 连接池中的最大空闲连接
+#        max-idle: 8
+#        # 连接池中的最小空闲连接
+#        min-idle: 0
+
 
 #找到mappers
 mybatis:
@@ -21,4 +43,3 @@ server:
   port: 5520
   servlet:
     context-path: /
-
